--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "zxcvbn",
+  "name": "zxcvbn-it",
   "version": "4.4.2",
   "description": "realistic password strength estimation",
   "author": "Dan Wheeler",
   "license": "MIT",
   "main": "lib/main.js",
-  "repository": "dropbox/zxcvbn",
+  "repository": "flaviogrossi/zxcvbn",
   "scripts": {
     "test": "coffeetape test/*.coffee | faucet",
     "test-saucelabs": "zuul -- test/*.coffee",
@@ -13,8 +13,8 @@
     "watch": "npm run watch-lib & npm run watch-dist",
     "build-lib": "coffee -o lib --compile --bare --map src/*.coffee",
     "watch-lib": "coffee -o lib --compile --bare --map --watch src/*.coffee",
-    "build-dist": "browserify --debug  --standalone zxcvbn -t coffeeify --extension='.coffee' -t uglifyify src/main.coffee |   exorcist --base . dist/zxcvbn.js.map >| dist/zxcvbn.js",
-    "watch-dist": "watchify --debug -v --standalone zxcvbn -t coffeeify --extension='.coffee' -t uglifyify src/main.coffee -o 'exorcist --base . dist/zxcvbn.js.map >| dist/zxcvbn.js'",
+    "build-dist": "browserify --debug  --standalone zxcvbnIt -t coffeeify --extension='.coffee' -t uglifyify src/main.coffee |   exorcist --base . dist/zxcvbn-it.js.map >| dist/zxcvbn-it.js",
+    "watch-dist": "watchify --debug -v --standalone zxcvbnIt -t coffeeify --extension='.coffee' -t uglifyify src/main.coffee -o 'exorcist --base . dist/zxcvbn-it.js.map >| dist/zxcvbn-it.js'",
     "prepublish": "npm run build"
   },
   "devDependencies": {
@@ -44,6 +44,7 @@
     "cracking",
     "scoring",
     "entropy",
-    "bruteforce"
+    "bruteforce",
+    "italian"
   ]
 }
